<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_weight="6"
    android:background="@drawable/bk2"
    android:orientation="vertical" >
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal" >
 
        <!-- 终端1 内层的垂直布局 -->
        
    	<LinearLayout
		    android:layout_width="fill_parent"
		    android:layout_height="match_parent"
		    android:orientation="vertical" >
	 
	        <LinearLayout
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content">
	
	            <TextView
					android:id="@+id/node_title1"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content" />
	
	            <!--  	android:layout_height="wrap_content"   -->	
	            <Button
		            android:id="@+id/btn_set_limit"
					android:layout_width="wrap_content"
					android:layout_height="30dp"
					android:gravity="right"
		            android:textSize="10sp"
				    android:textColor="#FF000000"
		            android:text="@string/strSetLimit" />
	            
	            <TextView
	                android:id="@+id/textview_prompt"
	                android:layout_width="0dp"
	                android:layout_weight="1"
	                android:layout_height="wrap_content"
	                android:layout_marginLeft="20dp"
	                android:textColor="#FFFFFFFF"
	                android:textSize="10sp" />
	            
			</LinearLayout>	
	 	
			<LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content" >
		        
			    <TextView
	                android:id="@+id/temp1"
	                android:layout_width="0dp"
	                android:layout_weight="1"
	                android:layout_height="wrap_content"
	                android:layout_marginLeft="20dp"
	                android:textColor="#FFFFFFFF"
	                android:textSize="12sp" />
			    
			    <TextView
	                android:id="@+id/humi1"
	                android:layout_width="0dp"
	                android:layout_weight="1"
	                android:layout_height="wrap_content"
	                android:layout_marginLeft="20dp"
	                android:textColor="#FFFFFFFF"
	                android:textSize="12sp" />	
	                
	            <TextView
	                android:id="@+id/light1"
	                android:layout_width="0dp"
	                android:layout_weight="1"
	                android:layout_height="wrap_content"
	                android:layout_marginLeft="20dp"
	                android:textColor="#FFFFFFFF"
	                android:textSize="12sp" />
		    </LinearLayout>	
	
	
			<LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content" >
	
	            <TextView
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:textColor="#FFFFFFFF"
	                android:text="@string/temp_limit" />
	
	            <EditText
	                android:id="@+id/edit_temp_limit"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_weight="1"
	                android:textSize="15sp"
	                android:textColor="#FFFF0000"
	                android:ems="10" >
	                <requestFocus />
	            </EditText>
	
	            <TextView
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:textColor="#FFFFFFFF"
	                android:text="@string/humi_limit" />
	
	            <EditText
	                 android:id="@+id/edit_humi_limit"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_weight="1"
	                android:textSize="15sp"
	                android:textColor="#FFFF0000"
	                android:ems="10" />
	
	            <TextView
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:textColor="#FFFFFFFF"
	                android:text="@string/light_limit" />
	
	            <EditText
	                android:id="@+id/edit_light_limit"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_weight="1"
	                android:textSize="15sp"
	                android:textColor="#FFFF0000"
	                android:ems="10" />
	            
	        </LinearLayout>
		</LinearLayout>
    </LinearLayout>


    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <!-- node 2 内层的垂直布局 -->

        <LinearLayout
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <!-- 三个文本栏的布局设置 -->

            <TextView
                android:id="@+id/node_title2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/temperature2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:textColor="#FFFFFFFF"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/humidity2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:textColor="#FFFFFFFF"
                android:textSize="15sp" />
        </LinearLayout>
        <!-- 图片布局设置 -->

        <ImageView
            android:id="@+id/image_gas2"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="27dp"
            android:contentDescription="@string/desc3" />

        <ImageView
            android:id="@+id/image_human2"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="27dp"
            android:contentDescription="@string/desc1" />

        <ImageButton
            android:id="@+id/image_lamp2"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="27dp"
            android:contentDescription="@string/desc4" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <!-- node 3 内层的垂直布局 -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            

            <LinearLayout
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:orientation="horizontal" >
            
   	            <TextView
					android:id="@+id/node_title3"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content" />
			</LinearLayout>
			
			<TextView
                android:id="@+id/end3_rfid_cur"
                android:textColor="#FFFFFFFF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
			<TextView
                android:id="@+id/end3_rfid_all"
                android:textColor="#FFFFFFFF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            </LinearLayout>
            
        </LinearLayout>
        
    

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <!-- node 4 内层的垂直布局 -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/node_title4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content" >
		        
                <Button
		            android:id="@+id/btn_step1"
		            android:layout_weight="1"
		            android:textSize="15sp"
		            android:textColor="#FF000000"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/btn_step_string1" />
		
		        <Button
		            android:id="@+id/btn_step2"
		            android:layout_weight="1"
		            android:textSize="15sp"
		            android:textColor="#FF000000"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/btn_step_string2" />

		        <Button
		            android:id="@+id/btn_step3"
		            android:layout_weight="1"
		            android:textSize="15sp"
		            android:textColor="#FF000000"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/btn_step_string3" />
		
		        <Button
		            android:id="@+id/btn_step4"
		            android:layout_weight="1"
		            android:textSize="15sp"
		            android:textColor="#FF000000"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/btn_step_string4" />

		        <Button
		            android:id="@+id/btn_step5"
		            android:layout_weight="1"
		            android:textSize="15sp"
		            android:textColor="#FF000000"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/btn_step_string5" />		        
    	    </LinearLayout>	
          </LinearLayout>
    </LinearLayout>


    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="?android:attr/listDivider" />

     <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal" >
        
         <!-- node 5 内层的垂直布局 -->

   	</LinearLayout>
     
	<View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="?android:attr/listDivider" />
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/Tips"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="20dp"
            android:gravity="center_vertical|left"
            android:textColor="#FFFF0000"
            android:textSize="20sp" />
    </LinearLayout>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btn_network"
            android:layout_weight="1"
            android:textSize="15sp"
		    android:textColor="#FF000000"
            android:text="@string/network" />
<!--
        <Button
            android:id="@+id/btn_lamp_all"
            android:layout_weight="1"
            android:textSize="15sp"
            android:textColor="#FFFFFFFF"
            android:text="@string/lamp_on"/>

          
        <Button
            android:id="@+id/btn_scenes"
            android:layout_width="90dp"
            android:layout_height="55dp"
            android:textSize="15sp"
            android:textColor="#FFFFFFFF"
            android:text="@string/scene" />

-->
        <Button
            android:id="@+id/btn_exit"
            android:layout_weight="1"
            android:textSize="15sp"
		    android:textColor="#FF000000"
            android:text="@string/exit" />
    </TableRow>

</LinearLayout>